--- a/src/components/cardlist/cardlist.css
+++ b/src/components/cardlist/cardlist.css
@@ -1,3 +1,15 @@
+.active {
+    font-weight: 700;
+}
+
+.cards__container__main {
+    width: 100vw;
+}
+
+.cards__container__sort {
+    width: 100vw;
+}
+
 .cards {
     width: 62rem;
     display: grid;
@@ -8,6 +20,30 @@
     flex: 1 0 auto;
     margin-top: 3rem;
     margin-bottom: 3rem;
+}
+
+.cards__sort {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 12px 16px;
+    gap: 16px;
+    height: 22px;
+    box-shadow: 0px 2px 4px rgba(40, 41, 61, 0.04), 0px 8px 16px rgba(96, 97, 112, 0.16);
+    border-radius: 12px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    color: #7B8E98;
+    width: 62rem;
+    position: relative;
+    left: calc(50% - 31rem);
+    margin-top: 2rem;
+}
+
+.cards__sort span {
+    cursor: pointer;
 }
 
 @media (max-width: 580px) {
