--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,6 +1,6 @@
 footer {
     padding: 40px 0;
-    width: 100%;
+    width: 100vw;
     background: #FFE44D;
     height: 10rem;
     flex: 0 0 auto;
