--- a/src/components/cardlist/cardlist.css
+++ b/src/components/cardlist/cardlist.css
@@ -29,7 +29,7 @@
     padding: 12px 16px;
     gap: 16px;
     height: 22px;
-    box-shadow: 0px 2px 4px rgba(40, 41, 61, 0.04), 0px 8px 16px rgba(96, 97, 112, 0.16);
+    box-shadow: 0px 8px 16px rgba(96, 97, 112, 0.16);
     border-radius: 12px;
     font-style: normal;
     font-weight: 400;
@@ -54,4 +54,30 @@
         gap: 1rem;
         left: calc(50% - 12rem);
     }
+}
+
+.cards__show__else {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 12px 12px 12px 24px;
+    gap: 8px;
+    width: 992px;
+    height: 48px;
+    border: 1px solid #CFD8DC;
+    border-radius: 87px;
+    font-family: 'Nunito';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 20px;
+    color: #1A1A1A;
+    cursor: pointer;
+    background-color: #ffffff;
+    width: 62rem;
+    position: relative;
+    left: calc(50% - 31rem);
+    margin: 2rem 0;
 }
