--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -31,10 +31,14 @@ header {
     flex-direction: row;
     align-items: center;
     padding: 0px;
-    gap: 34px;
-    width: 140px;
+    gap: 30px;
+    width: 200px;
     height: 24px;
     position: relative;
+}
+
+.header_icons svg{
+    cursor: pointer;
 }
 
 .header__likes {
