--- a/src/components/reviews/reviews.css
+++ b/src/components/reviews/reviews.css
@@ -1,5 +1,6 @@
 .reviews__firstInfo {
     margin: 1rem 0;
+    position: relative;
 }
 
 .reviews__name {
@@ -19,8 +20,6 @@
     color: #7B8E98;
 }
 
-/* .reviews__rating {} */
-
 .reviews__text {
     font-style: normal;
     font-weight: 400;
@@ -35,4 +34,10 @@
     background: #ECEFF1;
     color: #ECEFF1;
     height: 1px;
+}
+
+.reviews__deleteReview {
+    cursor: pointer;
+    position: absolute;
+    left: calc(100% - 2rem);
 }
