--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -6,6 +6,7 @@
     caret-color: #ffe44d;
     font-size: 16px;
     line-height: 20px;
+    font-family: 'Nunito';
     color: #1a1a1a;
     padding: 14px 20px;
     border: 1px solid transparent;
