--- a/src/components/forms/modals.css
+++ b/src/components/forms/modals.css
@@ -1,9 +1,24 @@
+.closeCross {
+    position: absolute;
+    left: 417px;
+    top: 21px;
+    cursor: pointer;
+}
+
 .behind_modal {
     background-color: rgba(96, 97, 112, 0.24);
     width: 100vw;
     height: 100vh;
     position: relative;
     z-index: 2;
+}
+
+.edituser {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
 }
 
 .modals {
@@ -20,6 +35,10 @@
     background: #FFFFFF;
     box-shadow: 0px 2px 8px rgba(40, 41, 61, 0.08), 0px 20px 32px rgba(96, 97, 112, 0.24);
     border-radius: 20px;
+}
+
+.edituser__info {
+    top: 20%;
 }
 
 .modals__title {
